fix: readded scrollbar height back

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -43,6 +43,7 @@ html {
 }
 
 ::-webkit-scrollbar {
+    height: var(--scrollbar-thickness);
     width: var(--scrollbar-thickness);
 }
 
